--- a/clickbait_model.ipynb
+++ b/clickbait_model.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# source: https://taejoon-kim.medium.com/clickbait-headline-detector-using-nlp-and-ml-algorithms-23c248c945ff "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
